--- a/html/Resume.html
+++ b/html/Resume.html
@@ -4,9 +4,9 @@
         <body>
             <P>
             <h2 style="text-align: center"><u>RESUME</u></h2>
-            <h4>NAME:HARSHALA AMRUT WADEKAR</h4>
-            <h4>DOB:24/08/1995</h4>
-            <h4>QUALIFICATION:BE(E&TC)</h4>
+            <h4>NAME:soham vilas nimbalkar</h4>
+            <h4>DOB:30/01/2001</h4>
+            <h4>QUALIFICATION:BE</h4>
             </P>
 
             <P>
@@ -17,9 +17,9 @@
             
 
             <tbody>
-                <tr><td>BE(E&TC)</td><td>2017</td><td>grade"A"</td></tr>
-                <tr><td>HSC</td><td>2013</td><td>grade"A"</td></tr>
-                <tr><td>SSC</td><td>2011</td><td>grade"A"</td></tr>
+                <tr><td>BE(Mech)</td><td>2022</td><td>grade"A"</td></tr>
+                <tr><td>HSC</td><td>2018</td><td>grade"A"</td></tr>
+                <tr><td>SSC</td><td>2016</td><td>grade"A"</td></tr>
 
             </tbody>
            </table>
@@ -34,13 +34,12 @@
             </div>
             <div>
                 <h3>ABOUT MYSELF</h3>
-                <h4>I have completed my engineering from ndmvp college nashik</h4>
+                <h4>I have completed my engineering from vpkbiet</h4>
                 </div>
             <div>
                 <p>
                 <h3>DESCRIPTION</h3>
-                <pre><h4>i have done some certification course like software courses from seed infotech.
-Also Participated in the Ellicite 2k17</h4></pre>
+                <pre><h4>i have done some certification course like Ai for everyone</h4></pre>
                 </p>
             </div>
         </body>
